@@ -14,12 +14,6 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -33,7 +27,7 @@ public class WebSecurityConfig {
     }    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Disabled: Gateway handles CORS
+            .cors(AbstractHttpConfigurer::disable)
             .csrf(AbstractHttpConfigurer::disable)
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
@@ -47,7 +41,7 @@ public class WebSecurityConfig {
     // @Bean
     // public CorsConfigurationSource corsConfigurationSource() {
     //     CorsConfiguration configuration = new CorsConfiguration();
-    //     configuration.setAllowedOrigins(List.of("http://localhost:5173")); // Frontend URL
+    //     configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000", "http://localhost:3003")); // Specific frontend URLs
     //     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     //     configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
     //     configuration.setAllowCredentials(true);
